-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 3.0.0-rc1
-
Ubuntu 12.04, 32bit, QtCreator 3.0 based on Qt 5.2
Steps to reproduce:
- start Creator with clean settings (have no Qt5 in PATH, I've got a Qt4 in PATH if this matters)
- create a Qt Quick UI (from New Project wizard) using Quick 2.0
- create a Qt Quick Application using Quick 2.0 or Controls - this should now tell you there's no valid kit
- on the Kit Selection page click on 'options' link
- add Qt 5 version and create a kit out of it, hit OK
- application to be created should have the newly create kit automatically selected
- click 'Next' and 'Finish'
Current behavior:
- Creator crashes
See attached backtrace (bt.log) or full backtrace (btFull.log)
For Gerrit Dashboard: QTCREATORBUG-10872 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
71997,1 | TargetSelector: Don't crash in currentSubIndex() | 3.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |