TargetSelector: Don't crash in currentSubIndex()

if the currentIndex() is -1

Task-number: QTCREATORBUG-10872
Change-Id: Ia1c8d3df21649294eeadfbf84a4432c69e74616f
Reviewed-by: Tobias Hunger <tobias.hunger@digia.com>
Reviewed-by: Kai Koehne <kai.koehne@digia.com>